# UPnPsdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Apps/: CMakeLists.txt  UPnPsdk_uninstall.sh  compile-api_calls.sh  compile-api_calls_pre_fork.sh  test_api_calls-csh.sh  test_api_calls-psh.sh  test_api_calls.sh  test_api_calls_pre_fork.sh
Apps/src/: UPnPsdk_info.cpp  api_calls.c  api_calls.cpp  api_calls_C++.cpp  info_UPnPsdk.cpp
Compa/: CMakeLists.txt
Compa/inc/: API.hpp  Callback.hpp  UpnpActionComplete.hpp  UpnpActionRequest.hpp  UpnpDiscovery.hpp  UpnpEvent.hpp  UpnpEventSubscribe.hpp  UpnpExtraHeaders.hpp  UpnpFileInfo.hpp  UpnpGlobal.hpp  UpnpInet.hpp  UpnpStateVarComplete.hpp  UpnpStateVarRequest.hpp  UpnpString.hpp  UpnpSubscriptionRequest.hpp  UpnpUniStd.hpp  ithread.h  ithread.hpp  ixml.h  list.hpp  posix_overwrites.h  upnp.hpp  upnpdebug.hpp  upnptools.hpp
Compa/inc/ixml/: ixml.hpp  ixmldebug.hpp  posix_overwrites.h
Compa/src/api/: UpnpActionComplete.cpp  UpnpActionRequest.cpp  UpnpDiscovery.cpp  UpnpEvent.cpp  UpnpExtraHeaders.cpp  UpnpFileInfo.cpp  UpnpStateVarComplete.cpp  UpnpStateVarRequest.cpp  UpnpString.cpp  upnpapi.cpp  upnpdebug.cpp  upnptools.cpp
Compa/src/gena/: gena_ctrlpt.cpp  gena_device.cpp
Compa/src/genlib/miniserver/: miniserver.cpp
Compa/src/genlib/net/: sock.cpp
Compa/src/genlib/service-table/: service_table.cpp
Compa/src/genlib/util/: list.cpp  membuffer.cpp  strintmap.cpp
Compa/src/inc/: GenlibClientSubscription.hpp  VirtualDir.hpp  gena.hpp  httpparser.hpp  httpreadwrite.hpp  membuffer.hpp  miniserver.hpp  parsetools.hpp  service_table.hpp  soap_ctrlpt.hpp  sock.hpp  sock_api.hpp  sock_if.hpp  ssdp_common.hpp  ssdp_ctrlpt.hpp  ssdp_device.hpp  statcodes.hpp  strintmap.hpp  sysdep.hpp  unixutil.hpp  upnpapi.hpp  uri.hpp  urlconfig.hpp  uuid.hpp  webserver.hpp
Compa/src/inc/ixml/: ixmlmembuf.hpp  ixmlparser.hpp
Compa/src/ixml/: attr.cpp  document.cpp  element.cpp  ixml.cpp  ixmldebug.cpp  ixmlmembuf.cpp  ixmlparser.cpp  namedNodeMap.cpp  node.cpp  nodeList.cpp
Compa/src/soap/: soap_ctrlpt.cpp  soap_device.cpp
Compa/src/ssdp/: SSDPResultData.cpp  SSDPResultData.hpp  ssdp_common.cpp  ssdp_ctrlpt.cpp  ssdp_device.cpp
Compa/src/threadutil/: FreeList.hpp  LinkedList.cpp  ThreadPool.cpp  ThreadPool.hpp  ThreadPool_if.hpp  TimerThread.cpp  TimerThread.hpp
Compa/src/urlconfig/: urlconfig.cpp
Compa/src/uuid/: sysdep.cpp  uuid.cpp
Pupnp/: CMakeLists.txt  gena_ctrlpt.c  gena_device.c  ixmlparser.c  ixmlparser_old.c  node-old.c  node.c  soap_device.c  ssdp_ctrlpt.c  ssdp_device.c  ssdp_server.c
Pupnp/include/pupnp/: ThreadPool.hpp  threadpool_init.hpp
Pupnp/ixml/: CMakeLists.txt
Pupnp/ixml/inc/: ixml.hpp  ixmldebug.hpp
Pupnp/ixml/src/: attr.cpp  document.cpp  element.cpp  ixml.cpp  ixmldebug.cpp  ixmlmembuf.cpp  ixmlparser.cpp  namedNodeMap.cpp  node.cpp  nodeList.cpp
Pupnp/ixml/src/inc/: ixmlmembuf.hpp  (+1 more)
Pupnp/ixml/test/: CMakeLists.txt  poc_gh_506.cpp  run_tests.sh  test_document.sh
Pupnp/sample/common/: sample_util.c  sample_util.h  tv_ctrlpt.c  tv_ctrlpt.h  tv_device.c  tv_device.h
Pupnp/sample/linux/: tv_combo_main.c  tv_ctrlpt_main.c  tv_device_main.c
Pupnp/src/: threadpool_init.cpp
Pupnp/src/api/: upnpdebug.cpp
Pupnp/upnp/: CMakeLists.txt
Pupnp/upnp/inc/: Callback.hpp  UpnpActionComplete.hpp  UpnpActionRequest.hpp  UpnpDiscovery.hpp  UpnpEvent.hpp  UpnpEventSubscribe.hpp  UpnpExtraHeaders.hpp  UpnpFileInfo.hpp  UpnpGlobal.hpp  UpnpInet.hpp  UpnpIntTypes.hpp  UpnpStateVarComplete.hpp  UpnpStateVarRequest.hpp  UpnpStdInt.hpp  UpnpString.hpp  UpnpSubscriptionRequest.hpp  UpnpUniStd.hpp  list.hpp  upnp.hpp  upnpconfig.h.cm  upnpdebug.hpp  upnptools.hpp
Sample/: CMakeLists.txt
Sample/common/: sample_util.cpp  sample_util.h  sample_util.hpp  tv_ctrlpt.cpp  tv_ctrlpt.h  tv_ctrlpt.hpp  tv_device.cpp  tv_device.h  tv_device.hpp
Sample/linux/: tv_combo_main.cpp  tv_device_main.cpp
Sample/run/: UpnpInit2.cpp
UPnPsdk/: CMakeLists.txt  directory.dox
UPnPsdk/include/UPnPsdk/: API.hpp  addrinfo.hpp  connection_common.hpp  global.hpp  global.ipp  httpparser.hpp  httpreadwrite.hpp  netadapter.hpp  netadapter2.hpp  netadapter_if.hpp  netadapter_unix.hpp  netadapter_win32.hpp  netaddr.hpp  port.hpp  port_sock.hpp  pthread.hpp  sockaddr.hpp  socket.hpp  strintmap.hpp  synclog.hpp  upnp_device.hpp  upnptools.hpp  uri.hpp  url.hpp  urlparser.hpp  visibility.hpp  webserver.hpp
UPnPsdk/src/: global.cpp  strintmap.cpp
UPnPsdk/src/api/: upnptools.cpp
UPnPsdk/src/net/: addrinfo.cpp  connection_common.cpp  netadapter.cpp  netadapter2.cpp  netadapter_if.cpp  netadapter_unix.cpp  netadapter_win32.cpp  netaddr.cpp  netifinfo_unix.cpp  pthread.cpp  sockaddr.cpp  socket.cpp  upnp_device.cpp
Utest/UPnPsdk/: CMakeLists.txt  test_addrinfo.cpp  test_general.cpp  test_netadapter.cpp  test_netadapter2.cpp  test_netaddr.cpp  test_sockaddr.cpp  test_socket.cpp  test_socket2.cpp  test_strintmap.cpp  test_upnp_device.cpp  test_upnptools.cpp  test_uri.cpp  test_webserver.cpp
Utest/UPnPsdk/test_uri.d/: CMakeLists.txt  test_url_class.cpp  test_urlparser.cpp
Utest/compa/0-addressing/: CMakeLists.txt  test_miniserver.cpp  test_miniserver_run.cpp  test_openssl_threaded.cpp  test_sock.cpp  test_sock_ssl.cpp
Utest/compa/1-discovery/: CMakeLists.txt  test_ssdp.cpp  test_ssdp_common.cpp  test_ssdp_device.cpp
Utest/compa/api.d/: CMakeLists.txt  test_UpnpFileInfo.cpp  test_UpnpString.cpp  test_upnpapi.cpp  test_upnpapi_unix.cpp  test_upnpapi_win32.cpp  test_upnpdebug.cpp
Utest/compa/http.d/: CMakeLists.txt  test_httpparser.cpp  test_webserver.cpp
Utest/compa/threadutil.d/: CMakeLists.txt  test_FreeList.cpp  test_ThreadPool.cpp  test_TimerThread.cpp
Utest/compa/uri.d/: CMakeLists.txt  test_uri.cpp  test_uri2.cpp  test_uri_parse.cpp
Utest/compa/util.d/: CMakeLists.txt  test_list.cpp  test_membuffer.cpp  test_strintmap.cpp
Utest/ixml/: CMakeLists.txt  test_ixml.cpp
Utest/pupnp/: CMakeLists.txt
Utest/pupnp/uri.d/: CMakeLists.txt  test_uri.cpp
Utest/sample/: CMakeLists.txt  test_tv_device.cpp
(+8572 files in other folders)
